# cv_customisation_agent

./: .env.example  .gitignore  Makefile  README.md  agents.md  evaluate.py  main.py  parse_jd_to_yaml.py  pyproject.toml  refactoring.md
agent/: llm_client.py  models.py  orchestrator.py
config/: settings.py
data/base_cv/: master_cv.yaml
data/eval_jd/: apple_mle.yaml  gojek_lead_ds.yaml  paypal_mle.yaml
evaluation/: __init__.py  evaluator.py  models.py  utils.py
prompts/: templates.py
tests/: test_agent.py  test_nodes.py  test_tools.py
tools/: cv_analyzer.py  cv_builder.py  faithfulness_evaluator.py  job_search.py
