[project]
name = "job-research-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.1.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.9",
    "markdown>=3.10.2",
    "pydantic>=2.12.5",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "pytube>=15.0.0",
    "xhtml2pdf>=0.2.17",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
